plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'com.chessgame.GamePlay'
}

dependencies {
    implementation 'org.openpnp:opencv:4.9.0-0'
}

javafx {
    version = "21.0.5" 
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}